# luther

./: .gitignore  README.md  docker-compose.yml  run_backend.ps1  run_gateway.ps1  start.ps1
core/: .env.example  Dockerfile  pyproject.toml  run_backend.ps1  setup_auth.py
core/src/luther/: __init__.py  auth.py  brain.py  calendar_tools.py  config.py  crypto.py  db.py  gmail_tools.py  main.py  models.py  tasks_tools.py  whatsapp.py  whisper_tools.py
core/tests/: conftest.py  test_crypto.py  test_main.py  test_models.py  test_whatsapp.py
gateway/: .env.example  Dockerfile  package-lock.json  package.json
gateway/src/: api.ts  index.ts  whatsapp.ts
